tests/NormalTests/paczka1/small_fuzzy/96997696.err
Error in line 3: ynBjzQ4nm S518 84,1
Error in line 1: jjmm5mD S518 2,3
Error in line 6: jjmm5mD S355 49,0
Error in line 8: jjmm5mD A994 10,3
Error in line 10: jjmm5mD S518 64,3
Error in line 12: 5XrW6TmMcDf S355 17,1
